program-libs/zero-copy/tests/derive/ui/fail/08_newtype_pattern.rs
// Edge case: Newtype pattern
#![cfg(feature="mut")] use light_zero_copy_derive::{ZeroCopy, ZeroCopyMut};

#[derive(ZeroCopy, ZeroCopyMut)]
#[repr(C)]
pub struct NewType(pub Vec<u8>);

fn main() {}